// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateNavigationConfig test standard config + additional content 1`] = `
[
  {
    "children": [
      {
        "label": "Add",
        "path": "/test/cerner-terra-dev-site/add",
        "type": "md",
      },
      {
        "label": "File",
        "path": "/test/cerner-terra-dev-site/file",
        "type": "js",
      },
      {
        "label": "File Outside",
        "path": "/test/cerner-terra-dev-site/file-outside",
        "type": "md",
      },
    ],
    "label": "Test",
    "path": "/test",
  },
]
`;

exports[`generateNavigationConfig test standard config + additional content 2`] = `
{
  "/": "/test/cerner-terra-dev-site/add",
  "/test": "/test/cerner-terra-dev-site/add",
}
`;

exports[`generateNavigationConfig test standard config + additional content 3`] = `
{
  "/test/cerner-terra-dev-site/add": {
    "label": "Add",
    "type": "md",
  },
  "/test/cerner-terra-dev-site/file": {
    "label": "File",
    "type": "js",
  },
  "/test/cerner-terra-dev-site/file-outside": {
    "label": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 1`] = `
[
  {
    "children": [
      {
        "label": "File",
        "path": "/test/cerner-terra-dev-site/file",
        "type": "js",
      },
      {
        "label": "File Outside",
        "path": "/test/cerner-terra-dev-site/file-outside",
        "type": "md",
      },
    ],
    "label": "Test",
    "path": "/test",
  },
]
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 2`] = `
{
  "/": "/test/cerner-terra-dev-site/file",
  "/test": "/test/cerner-terra-dev-site/file",
}
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 3`] = `
{
  "/test/cerner-terra-dev-site/file": {
    "label": "File",
    "type": "js",
  },
  "/test/cerner-terra-dev-site/file-outside": {
    "label": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests multiple primary nav items 1`] = `
[
  {
    "label": "Test",
    "pageConfig": {
      "label": "File",
      "path": "/test/cerner-terra-dev-site/file",
      "type": "js",
    },
    "path": "/test",
  },
  {
    "label": "Doc",
    "pageConfig": {
      "label": "File",
      "path": "/doc/cerner-terra-dev-site/file",
      "type": "js",
    },
    "path": "/doc",
  },
]
`;

exports[`generateNavigationConfig tests multiple primary nav items 2`] = `
{
  "/": "/test/cerner-terra-dev-site/file",
  "/doc": "/doc/cerner-terra-dev-site/file",
  "/test": "/test/cerner-terra-dev-site/file",
}
`;

exports[`generateNavigationConfig tests multiple primary nav items 3`] = `
{
  "/doc/cerner-terra-dev-site/file": {
    "label": "File",
    "type": "js",
  },
  "/test/cerner-terra-dev-site/file": {
    "label": "File",
    "type": "js",
  },
}
`;

exports[`generateNavigationConfig tests prod mode 1`] = `
[
  {
    "children": [
      {
        "label": "File",
        "path": "/test/cerner-terra-dev-site/file",
        "type": "js",
      },
      {
        "label": "File Outside",
        "path": "/test/cerner-terra-dev-site/file-outside",
        "type": "md",
      },
    ],
    "label": "Test",
    "path": "/test",
  },
]
`;

exports[`generateNavigationConfig tests prod mode 2`] = `
{
  "/": "/test/cerner-terra-dev-site/file",
  "/test": "/test/cerner-terra-dev-site/file",
}
`;

exports[`generateNavigationConfig tests prod mode 3`] = `
{
  "/test/cerner-terra-dev-site/file": {
    "label": "File",
    "type": "js",
  },
  "/test/cerner-terra-dev-site/file-outside": {
    "label": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests sorting 1`] = `
[
  {
    "children": [
      {
        "label": "First File",
        "path": "/test/cerner-terra-dev-site/first-file",
        "type": "js",
      },
      {
        "label": "Second File",
        "path": "/test/cerner-terra-dev-site/second-file",
        "type": "js",
      },
      {
        "children": [
          {
            "label": "File",
            "path": "/test/cerner-terra-dev-site/dir/file",
            "type": "js",
          },
        ],
        "label": "Dir",
      },
      {
        "label": "A",
        "path": "/test/cerner-terra-dev-site/a",
        "type": "js",
      },
      {
        "children": [
          {
            "label": "File",
            "path": "/test/cerner-terra-dev-site/b/file",
            "type": "js",
          },
        ],
        "label": "B",
      },
    ],
    "label": "Test",
    "path": "/test",
  },
]
`;

exports[`generateNavigationConfig tests sorting 2`] = `
{
  "/": "/test/cerner-terra-dev-site/first-file",
  "/test": "/test/cerner-terra-dev-site/first-file",
}
`;

exports[`generateNavigationConfig tests sorting 3`] = `
{
  "/test/cerner-terra-dev-site/a": {
    "label": "A",
    "type": "js",
  },
  "/test/cerner-terra-dev-site/b/file": {
    "label": "File",
    "type": "js",
  },
  "/test/cerner-terra-dev-site/dir/file": {
    "label": "File",
    "type": "js",
  },
  "/test/cerner-terra-dev-site/first-file": {
    "label": "First File",
    "type": "js",
  },
  "/test/cerner-terra-dev-site/second-file": {
    "label": "Second File",
    "type": "js",
  },
}
`;
